@@ -20,6 +20,12 @@
 
 Server:
    /*
+	  True or False
+   */
+
+   Disable = False;
+
+   /*
 	  Daemon is listening on local socket
    */
 
